# cs253

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project.mk  provider.h  windmill
docs/: lab1.md  lab2.md
docs/sokoban_levels/: test.txt
labs/: coding_games.cpp  coding_games.h  lab1.cpp  lab1.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  race.h  windmill.h
scripts/: os_script.sh
